--- a/config/timeseries.yaml
+++ b/config/timeseries.yaml
@@ -1,8 +1,6 @@
-
-
 paths: 
-  ruta_x: "./data/Processed/x_processed.xlsx"
-  ruta_y: "./data/Processed/y_processed.xlsx"
+  x_path: "./data/Processed/x_processed.xlsx"
+  y_path: "./data/Processed/y_processed.xlsx"
 
 dataloader: 
   shuffle: true
@@ -10,12 +8,12 @@ dataloader:
 
 model: 
   output_window: 24  
-  batch_size: 32     # número de ejemplos por lote y  batch_size = numero de ejemplos que el modelo procesa antes de actualizar los pesos.
+  batch_size: 32     # number of samples per batch; batch_size = number of samples the model processes before updating weights.
   lag: 0
   length: 96
-  # output_size: es el número de neuronas en la capa final
-  hidden_size: 128  # Es decir, hidden_size = h = número de dimensiones del vector que la LSTM “recuerda” y pasa al siguiente paso/layer
+  # output_size: the number of neurons in the final layer
+  hidden_size: 128   # hidden_size = h = number of dimensions of the vector that the LSTM "remembers" and passes to the next step/layer
   output_size: 24
-  epochs: 40  #cuantas veces se actualizan los pesos del modelo
-  learning_rate: 0.001  # tasa de aprendizaje
-  dropout: 0.3 #Desconectamos algunas
+  epochs: 40         # how many times the model weights are updated (full passes through the dataset)
+  learning_rate: 0.001  # step size for the optimizer
+  dropout: 0.3       # percentage of neurons randomly deactivated to prevent overfitting
